# mpc_motion_planner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Robot_ocp.hpp  main.cpp  polympc_redef.hpp  rocket_mpc.hpp  test_codegen.cpp  test_rnea_derivatives.cpp  test_rnea_derivatives.ipynb
analysis/: benchmark_analysis.ipynb  data_analysis.ipynb
data/: benchmark_analysis.ipynb  benchmark_data.txt  data_analysis.ipynb  optimal_solution.txt
examples/: benchmark.cpp  offline_trajectory.cpp
mpc_solver/: CMakeLists.txt  motionPlanner.cpp  motionPlanner.hpp  polympc_redef.hpp  robot_ocp.hpp
panda-model/: panda_arm.urdf
robot/: pandaWrapper.cpp  pandaWrapper.hpp
robot_utils/: pandaWrapper.cpp  pandaWrapper.hpp
robot_utils/panda-model/: panda_arm.urdf  panda_mass.urdf
solver/: rocket_mpc.hpp
src/: main.cpp  main.hpp
test_develop/: test_rnea_derivatives.ipynb
